--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_customer_support.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_customer_support.ipynb
@@ -1,8 +1,9 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "738b2deeb6043fb5",
+   "metadata": {},
    "source": [
     "# Customer Support ticket Dataset\n",
     "\n",
@@ -17,37 +18,110 @@
     "## Setup\n",
     "\n",
     "### Open Secure Configuration Storage"
-   ],
-   "id": "738b2deeb6043fb5"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0cc3fde7cb644c959b066c14bcbd2f73",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e6070f0cd724adaa02f4f6acfb98ce8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(Box(children=(Label(value='Configuration Store', layout=Layout(border_bottom='solid 1px', border…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "740c0630675f5c8b",
+   "metadata": {},
    "source": [
     "## Download data\n",
     "\n",
     "We will access the dataset on [Kaggle](https://www.kaggle.com/) using [kagglehub](https://github.com/Kaggle/kagglehub)."
-   ],
-   "id": "740c0630675f5c8b"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "2cc9cc97741db1c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting kagglehub\n",
+      "  Downloading kagglehub-0.3.12-py3-none-any.whl.metadata (38 kB)\n",
+      "Requirement already satisfied: packaging in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from kagglehub) (24.2)\n",
+      "Requirement already satisfied: pyyaml in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from kagglehub) (6.0.2)\n",
+      "Requirement already satisfied: requests in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from kagglehub) (2.32.3)\n",
+      "Requirement already satisfied: tqdm in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from kagglehub) (4.67.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from requests->kagglehub) (3.4.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from requests->kagglehub) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from requests->kagglehub) (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from requests->kagglehub) (2025.1.31)\n",
+      "Downloading kagglehub-0.3.12-py3-none-any.whl (67 kB)\n",
+      "Installing collected packages: kagglehub\n",
+      "Successfully installed kagglehub-0.3.12\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Downloading from https://www.kaggle.com/api/v1/datasets/download/suraj520/customer-support-ticket-dataset?dataset_version_number=1...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 828k/828k [00:00<00:00, 1.48MB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting files...\n",
+      "Path to dataset files: /home/jupyter/.cache/kagglehub/datasets/suraj520/customer-support-ticket-dataset/versions/1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install kagglehub\n",
     "import kagglehub\n",
@@ -57,41 +131,100 @@
     "download_path = kagglehub.dataset_download(\"suraj520/customer-support-ticket-dataset\")\n",
     "\n",
     "print(\"Path to dataset files:\", download_path)"
-   ],
-   "id": "2cc9cc97741db1c7"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Then we will load the data into a csv and convert it into a pandas dataframe for ease of use.",
-   "id": "87c913b68ff37913"
+   "id": "87c913b68ff37913",
+   "metadata": {},
+   "source": [
+    "Then we will load the data into a csv and convert it into a pandas dataframe for ease of use."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "6e05ed696fc66688",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Ticket ID        Customer Name              Customer Email  Customer Age  \\\n",
+      "0          1        Marisa Obrien  carrollallison@example.com            32   \n",
+      "1          2         Jessica Rios    clarkeashley@example.com            42   \n",
+      "2          3  Christopher Robbins   gonzalestracy@example.com            48   \n",
+      "3          4     Christina Dillon    bradleyolson@example.org            27   \n",
+      "4          5    Alexander Carroll     bradleymark@example.com            67   \n",
+      "\n",
+      "  Customer Gender Product Purchased Date of Purchase      Ticket Type  \\\n",
+      "0           Other        GoPro Hero       2021-03-22  Technical issue   \n",
+      "1          Female       LG Smart TV       2021-05-22  Technical issue   \n",
+      "2           Other          Dell XPS       2020-07-14  Technical issue   \n",
+      "3          Female  Microsoft Office       2020-11-13  Billing inquiry   \n",
+      "4          Female  Autodesk AutoCAD       2020-02-04  Billing inquiry   \n",
+      "\n",
+      "             Ticket Subject  \\\n",
+      "0             Product setup   \n",
+      "1  Peripheral compatibility   \n",
+      "2           Network problem   \n",
+      "3            Account access   \n",
+      "4                 Data loss   \n",
+      "\n",
+      "                                  Ticket Description  \\\n",
+      "0  I'm having an issue with the {product_purchase...   \n",
+      "1  I'm having an issue with the {product_purchase...   \n",
+      "2  I'm facing a problem with my {product_purchase...   \n",
+      "3  I'm having an issue with the {product_purchase...   \n",
+      "4  I'm having an issue with the {product_purchase...   \n",
+      "\n",
+      "               Ticket Status                                     Resolution  \\\n",
+      "0  Pending Customer Response                                            NaN   \n",
+      "1  Pending Customer Response                                            NaN   \n",
+      "2                     Closed   Case maybe show recently my computer follow.   \n",
+      "3                     Closed  Try capital clearly never color toward story.   \n",
+      "4                     Closed                    West decision evidence bit.   \n",
+      "\n",
+      "  Ticket Priority Ticket Channel  First Response Time   Time to Resolution  \\\n",
+      "0        Critical   Social media  2023-06-01 12:15:36                  NaN   \n",
+      "1        Critical           Chat  2023-06-01 16:45:38                  NaN   \n",
+      "2             Low   Social media  2023-06-01 11:14:38  2023-06-01 18:05:38   \n",
+      "3             Low   Social media  2023-06-01 07:29:40  2023-06-01 01:57:40   \n",
+      "4             Low          Email  2023-06-01 00:12:42  2023-06-01 19:53:42   \n",
+      "\n",
+      "   Customer Satisfaction Rating  \n",
+      "0                           NaN  \n",
+      "1                           NaN  \n",
+      "2                           3.0  \n",
+      "3                           3.0  \n",
+      "4                           1.0  \n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "\n",
-    "csv_file = next(Path(path).glob(\"*\"))\n",
+    "csv_file = next(Path(download_path).glob(\"*\"))\n",
     "df = pd.read_csv(csv_file)\n",
     "print(df.head())\n"
-   ],
-   "id": "6e05ed696fc66688"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Upload into Database",
-   "id": "2247d8377f0e4c2b"
+   "id": "2247d8377f0e4c2b",
+   "metadata": {},
+   "source": [
+    "Upload into Database"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "2c33db2724e611a6",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null,
    "source": [
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
@@ -117,28 +250,35 @@
     "        \"CUSTOMER_SATISFACTION_RATING\" VARCHAR(2000000)\n",
     "    );\n",
     "    \"\"\")\n",
-    "    conn.import_from_pandas(split_df_list[0], table=(ai_lab_config.db_schema,\"ORIGINAL_CUSTOMER_SUPPORT_TICKETS\"))\n"
-   ],
-   "id": "2c33db2724e611a6"
+    "    conn.import_from_pandas(df, table=(ai_lab_config.db_schema,\"CUSTOMER_SUPPORT_TICKETS\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7caa2154-5254-4d8c-beca-05f9f22ad7dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
