--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Text AI Extension initialization\n",
     "\n",
-    "Here we will bring the Text AI Extension functionality up and running. We will do this via a single call to a function in the support library.\n",
+    "Here we will bring the Text AI Extension functionality up and running. We will do this via a single call to function in the support library.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
@@ -21,10 +21,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ca9cc3b0-2191-4e57-8e02-0256b5574b4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "756eb554ae5149d1abdd33bdf4149663",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c75f9221f5ea4ab78547dc190f7b4028",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(Box(children=(Label(value='Configuration Store', layout=Layout(border_bottom='solid 1px', border…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
@@ -40,10 +69,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "61af171a-df95-4f9f-a911-4f9f2a003a48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e5bb3659ec3c47fdbb6afbeb2578826d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(Box(children=(Label(value='Pre-release Access', layout=Layout(border_bottom='solid 1px', border_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run utils/txaie_init_ui.ipynb\n",
     "display(get_txaie_pre_release_ui(ai_lab_config))"
@@ -63,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7b8d3ea7-30f1-46ff-9a89-573e0d7cdc34",
    "metadata": {
     "editable": true,
@@ -74,7 +118,31 @@
      "uploading_model"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:The requested language alias PYTHON3_TXAIE is already in use.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "In SQL, you can activate the SLC\n",
+      "by using the following statements:\n",
+      "\n",
+      "To activate the SLC only for the current session:\n",
+      "ALTER SESSION SET SCRIPT_LANGUAGES='R=builtin_r JAVA=builtin_java PYTHON3=builtin_python3 PYTHON3_TXAIE=localzmq+protobuf:///bfsdefault/default/TXAIE/exasol_text_ai_extension_container_release?lang=python#/buckets/bfsdefault/default/TXAIE/exasol_text_ai_extension_container_release/exaudf/exaudfclient_py3';\n",
+      "\n",
+      "To activate the SLC on the system:\n",
+      "ALTER SYSTEM SET SCRIPT_LANGUAGES='R=builtin_r JAVA=builtin_java PYTHON3=builtin_python3 PYTHON3_TXAIE=localzmq+protobuf:///bfsdefault/default/TXAIE/exasol_text_ai_extension_container_release?lang=python#/buckets/bfsdefault/default/TXAIE/exasol_text_ai_extension_container_release/exaudf/exaudfclient_py3';\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import subprocess\n",
     "from exasol.nb_connector.text_ai_extension_wrapper import initialize_text_ai_extension, download_pre_release\n",
@@ -85,8 +153,16 @@
     "    pip_cmd = ['pip', 'install', str(project_wheel)]\n",
     "    subprocess.run(pip_cmd, check=True, capture_output=True)\n",
     "\n",
-    "    initialize_text_ai_extension(ai_lab_config, container_file=slc_tar_gz)"
+    "    initialize_text_ai_extension(ai_lab_config, container_file=slc_tar_gz)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af077fea-54d3-4f43-bfe9-3d2e36eba436",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -105,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
