--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/utils/txaie_default_extractor.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/utils/txaie_default_extractor.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from exasol.ai.text.extraction import *\n",
@@ -15,7 +13,7 @@
     "#default models\n",
     "NAMED_ENTITY_MODEL=\"guishe/nuner-v2_fewnerd_fine_super\"\n",
     "NLI_MODEL=\"tasksource/ModernBERT-large-nli\"\n",
-    "FEATURE_EXTRACTION_MODEL=\"answerdotai/ModernBERT-large\"\n",
+    "FEATURE_EXTRACTION_MODEL=\"answerdotai/ModernBERT-large\"#todo only define once?\n",
     "\n",
     "def DefaultExtractor(\n",
     "    ai_lab_config,\n",
@@ -71,21 +69,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
