--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -4,8 +4,8 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "In this notebook we create a Virtual Schema which accesses Json files on a public S3 bucket.\n",
-    "The data we're loading is a part of [Reuter 21578](https://paperswithcode.com/dataset/reuters-21578) dataset, which is a collection of documents with news articles. "
+    "In this notebook we create a Virtual Schema which accesses JSON files on a public S3 bucket.\n",
+    "The data we ale loading is a part of the [Reuters 21578](https://paperswithcode.com/dataset/reuters-21578) dataset, which is a collection of documents with news articles. "
    ],
    "id": "79790cc96f0d5bb2"
   },
@@ -29,8 +29,8 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "As a first step we setting up the S3 Virtual Schema connector in the database.\n",
-    "You can find more information in the [s3-document-files-virtual-schema](https://github.com/exasol/s3-document-files-virtual-schema/) GitHub repo. "
+    "As a first step, we are setting up the S3 Virtual Schema connector in the database.\n",
+    "You can find more information in the [s3-document-files-virtual-schema](https://github.com/exasol/s3-document-files-virtual-schema/) GitHub repository. "
    ],
    "id": "6c0f779ad4690794"
   },
@@ -50,9 +50,9 @@
     "\n",
     "To configure the virtual schema, we need the following:\n",
     "\n",
-    "1. Create an S3 Connection object: in what S3 bucket our data resides. Our data set is on the public S3 bucket, so no S3 credentials are needed. If your data is not open to the public, you'll need credentials to be stored in the Connection object.\n",
-    "2. Put EDML file into teh Bucket FS. EDML describes the mapping between Json structure and desired Virtual Schema tables and columns. In our case the mapping is simple, as every json file describes individual news article with the same set of columns. But EDML supports more complicated scenarios, like table references, foreign keys and missing columns. You can find more details [in the documentation](https://github.com/exasol/virtual-schema-common-document/blob/main/doc/user_guide/edml_user_guide.md)\n",
-    "3. Create Virtual Schema with S3 Connection object and EDML file in Bucket FS. After this step, new Virtual Schema tables are added to the Exasol, and every query from them performs S3 data read."
+    "1. Create an S3 Connection object, which specifies in which S3 bucket our data resides. Our dataset is on a public S3 bucket, so no S3 credentials are needed. If your data is not open to the public, you need to store credentials in the Connection object.\n",
+    "2. Put the EDML file into the Bucket FS. EDML describes the mapping between the JSON structure and the desired Virtual Schema tables and columns. In our case, the mapping is simple, as every JSON file describes an individual news article with the same set of columns. However, EDML supports more complex scenarios, like table references, foreign keys, and missing columns. You can find more details [in the documentation.](https://github.com/exasol/virtual-schema-common-document/blob/main/doc/user_guide/edml_user_guide.md)\n",
+    "3. Create a Virtual Schema with the S3 Connection object and the EDML file in the Bucket FS. After this step, new virtual tables are added to Exasol, and every query from them performs S3 data read."
    ],
    "id": "2b83bf8534f1ee88"
   },
@@ -94,13 +94,13 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "Our EDML extracts 3 fields from json files:\n",
-    "* `title`: as a varchar\n",
-    "* `id` (named as `NEWS_ID`): article identifier stored as a string\n",
-    "* `body`: text of the article up to 1024 characters long\n",
+    "Our EDML definition extracts 3 fields from JSON files:\n",
+    "* `title`: as a VARCHAR(255) where longer texts are truncated.\n",
+    "* `id` (named as `NEWS_ID`): article identifier stored as a VARCHAR(50)\n",
+    "* `body`: text of the article as VARCHAR(1024) where longer texts are truncated.\n",
     "\n",
-    "In addition to those 3 fields, we have field `topics`, which is extracted as a reference table.\n",
-    "In the json data topics are represented as a list of tags associated with the article, for example:\n",
+    "In addition to those 3 fields, we have the field `topics`, which is extracted as a reference table.\n",
+    "In the JSON data topics are represented as a list of tags associated with the article, for example:\n",
     "\n",
     "```\n",
     "    \"topics\": [\n",
@@ -113,7 +113,7 @@
     "    ],\n",
     "```\n",
     "\n",
-    "To have convenient access to topics, we use `toTableMapping` EDML feature, which creates a second table `NEWS_TOPICS`, keeping list of topics and `NEWS_ID`:\n",
+    "To have convenient access to the topics, we use the `toTableMapping` EDML feature, which creates a second table `NEWS_TOPICS`, keeping a list of topics and `NEWS_ID`:\n",
     "\n",
     "```\n",
     "      \"topics\": {\n",
@@ -175,10 +175,10 @@
    "source": [
     "# Query the data\n",
     "\n",
-    "Once we have our Virtual Schema created, new table `AI_LAB_VS.NEWS` is available for query. \n",
-    "But you need to be aware of performance overhead. Virtal Schemas don't do any intermediate caching and every request to the Virtual Schema table performs several S3 data reads, which might be slow.\n",
+    "Once we have our Virtual Schema created, new table `AI_LAB_VS.NEWS` is available for querying. \n",
+    "*Note*: you need to be aware of performance overhead. Virtual Schemas don't do any intermediate caching, and every request to a virtual table performs several S3 data reads, which might be slow.\n",
     "\n",
-    "If you're going to access the data several times, it might make sense to create the new table and copy the data from VS table in a normal table. Here we don't do that for simplicity - we do just one query and that's fine. "
+    "If you are going to access the data several times, it might make sense to create the new table and copy the data from the virtual table into a normal table. Here we don't do that for simplicity. "
    ],
    "id": "ee0b18f1ed03d5a4"
   },
@@ -206,7 +206,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "Besides the `NEWS` table, where each row is a news article, we have reference table with topics associated with every article.\n",
+    "Besides the `NEWS` table, where each row is a news article, we additionally have a reference table with topics associated with every article.\n",
     "In our EDML file, `toTableMapping` was used, which created a second table `NEWS_TOPICS`, containing flattened list of topics associated with `NEWS_ID`."
    ],
    "id": "fb187115aa035660"
@@ -235,7 +235,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "So, we can can get most frequent topics for our dataset, for example",
+   "source": "So, the query below can be used to obtain the most frequent topics for our dataset.S",
    "id": "c583bab31ea654cf"
   },
   {
@@ -264,7 +264,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Both tables `NEWS` and `NEWS_TOPICS` could be joined on `NEWS_ID` column:",
+   "source": "The tables `NEWS` and `NEWS_TOPICS` can also be joined on `NEWS_ID` column to find articles about a specific topic:",
    "id": "8dd75dbbd2a7fd0b"
   },
   {
@@ -279,6 +279,7 @@
     "    {schema_name!i}_VS.NEWS as news,\n",
     "    {schema_name!i}_VS.NEWS_TOPICS as topics\n",
     "where news.NEWS_ID = topics.NEWS_NEWS_ID\n",
+    "and topics.NAME = 'grain'\n",
     "\n",
     "limit 10\n",
     "\"\"\"\n",
