More small fixes

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "source": [
     "In this notebook we create a Virtual Schema which accesses JSON files on a public S3 bucket.\n",
-    "The data we ale loading is a part of the [Reuters 21578](https://paperswithcode.com/dataset/reuters-21578) dataset, which is a collection of documents with news articles. "
+    "The data we are loading is a part of the [Reuters 21578](https://paperswithcode.com/dataset/reuters-21578) dataset, which is a collection of documents with news articles. "
    ],
    "id": "79790cc96f0d5bb2"
   },
@@ -100,7 +100,7 @@
     "* `body`: text of the article as VARCHAR(1024) where longer texts are truncated.\n",
     "\n",
     "In addition to those 3 fields, we have the field `topics`, which is extracted as a reference table.\n",
-    "In the JSON data topics are represented as a list of tags associated with the article, for example:\n",
+    "In the JSON data, topics are represented as a list of tags associated with the article, for example:\n",
     "\n",
     "```\n",
     "    \"topics\": [\n",
@@ -175,7 +175,7 @@
    "source": [
     "# Query the data\n",
     "\n",
-    "Once we have our Virtual Schema created, new table `AI_LAB_VS.NEWS` is available for querying. \n",
+    "Once we have our Virtual Schema created, a new table `AI_LAB_VS.NEWS` is available for querying. \n",
     "*Note*: you need to be aware of performance overhead. Virtual Schemas don't do any intermediate caching, and every request to a virtual table performs several S3 data reads, which might be slow.\n",
     "\n",
     "If you are going to access the data several times, it might make sense to create the new table and copy the data from the virtual table into a normal table. Here we don't do that for simplicity. "
@@ -235,7 +235,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "So, the query below can be used to obtain the most frequent topics for our dataset.S",
+   "source": "So, the query below can be used to obtain the most frequent topics for our dataset.",
    "id": "c583bab31ea654cf"
   },
   {
